--- a/index.html
+++ b/index.html
@@ -4,70 +4,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Arne Sierens / Web developer</title>
+  <title>Arne Sierens // Web developer</title>
 </head>
 
 <body>
   <div class="content">
-    <h1>
-      <a href="/">Arne Sierens</a>
-    </h1>
+    <header>
+      <h1>
+        <a href="/">
+          Arne Sierens
+          <span>//</span>
+          Web developer
+        </a>
+      </h1>
+    </header>
 
-    <p>
-      I'm a
-      <strong>web developer</strong>
-      from <strong>Belgium</strong>.
-      Currently developing and maintaining the
-      <strong>internal web application</strong>
-      of <a href="http://mfcsintgregorius.be/">MFC Sint-Gregorius</a>,
-      both front end and back end. I code mostly
-      <strong>HTML</strong>,
-      <strong>CSS</strong>,
-      <strong>JavaScript</strong> and
-      <strong>PHP</strong>.
-    </p>
+    <section>
+      <h2>Work</h2>
 
-    <h2>Hobbies</h2>
+      <p>
+        Currently developing and maintaining the
+        <strong>internal web application</strong>
+        of <a href="http://mfcsintgregorius.be/">MFC Sint-Gregorius</a>,
+        both front end and back end.
+      </p>
+    </section>
 
-    <ul>
-      <li>
-        Family and friends.
-      </li>
-      <li>
-        Travelling.
-      </li>
-      <li>
-        <a href="https://www.last.fm/user/arnesierens" title="View my music stats." rel="me">Music</a>.
-      </li>
-      <li>
-        <a href="https://www.goodreads.com/arnesierens" title="View the books I've read." rel="me">Books</a>.
-      </li>
-      <li>Series.</li>
-      <li>Tennis.</li>
-    </ul>
+    <section>
+        <h2>Hobbies</h2>
 
-    <h2>Elsewhere</h2>
+        <ul>
+          <li>
+            Family and friends.
+          </li>
+          <li>
+            Travelling.
+          </li>
+          <li>
+            <a href="https://www.last.fm/user/arnesierens" title="View my music stats." rel="me">Music</a>.
+          </li>
+          <li>Series.</li>
+          <li>
+            <a href="https://www.goodreads.com/arnesierens" title="View the books I've read." rel="me">Books</a>.
+          </li>
+          <li>Soccer & tennis.</li>
+        </ul>
+    </section>
 
-    <ul>
-      <li>
-        <a href="https://twitter.com/arnesierens" rel="me">Twitter</a>
-      </li>
-      <li>
-        <a href="https://instagram.com/arnesierens" rel="me">Instagram</a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/arnesierens/" rel="me">LinkedIn</a>
-      </li>
-      <li>
-        <a href="https://github.com/arnesierens" rel="me">GitHub</a>
-      </li>
-      <li>
-        <a href="https://www.pinterest.com/sierensarne/" rel="me">Pinterest</a>
-      </li>
-      <li>
-        <a href="https://www.facebook.com/sierensarne" rel="me">Facebook</a>
-      </li>
-    </ul>
+    <section>
+      <h2>Elsewhere</h2>
+
+      <ul>
+        <li>
+          <a href="https://twitter.com/arnesierens" rel="me">Twitter</a>
+        </li>
+        <li>
+          <a href="https://instagram.com/arnesierens" rel="me">Instagram</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/arnesierens/" rel="me">LinkedIn</a>
+        </li>
+        <li>
+          <a href="https://github.com/arnesierens" rel="me">GitHub</a>
+        </li>
+        <li>
+          <a href="https://www.pinterest.com/sierensarne/" rel="me">Pinterest</a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/sierensarne" rel="me">Facebook</a>
+        </li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
