--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li>
             <a href="https://www.goodreads.com/arnesierens" title="View the books I've read." rel="me">Books</a>.
           </li>
-          <li>Soccer & tennis.</li>
+          <li>Soccer &amp; tennis.</li>
         </ul>
     </section>
 
