Added reset to fix iPhone issue

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Alice|Lato:300,400" rel="stylesheet">
 
   <style>
-    html, body {
+    /* Simple reset */
+
+    html, body, p, ul, li, div, span, h1, h2 {
       margin: 0;
       padding: 0;
+      font-size: 100%;
     }
 
     html {
@@ -77,15 +80,8 @@
       font-size: 1.125em;
     }
 
-    p {
-      margin: 0;
-      padding: 0;
-    }
-
     ul {
       list-style: none;
-      padding: 0;
-      margin: 0;
     }
 
     ::-moz-selection {
