--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       box-sizing: border-box;
 
       // Only for mobile devices
-      -webkit-text-size-adjust: 100%;
-         -moz-text-size-adjust: 100%;
-          -ms-text-size-adjust: 100%;
-              text-size-adjust: 100%;
+      -webkit-text-size-adjust: none;
+         -moz-text-size-adjust: none;
+          -ms-text-size-adjust: none;
+              text-size-adjust: none;
     }
 
     *, *:before, *:after {
