--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
     html {
       font-family: 'Lato', Arial, Helvetica, sans-serif;
       font-weight: 300;
-      font-size: 1em;
+      font-size: 100%;
       color: #444;
       background-color: #fff;
       box-sizing: border-box;
+
+      // Only for mobile devices
+      -webkit-text-size-adjust: 100%;
+         -moz-text-size-adjust: 100%;
+          -ms-text-size-adjust: 100%;
+              text-size-adjust: 100%;
     }
 
     *, *:before, *:after {
