--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     html {
       font-family: 'Lato', Arial, Helvetica, sans-serif;
       font-weight: 300;
-      font-size: 100%;
+      font-size: 1em;
       color: #444;
       background-color: #fff;
       box-sizing: border-box;
