--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       background-color: #fff;
       box-sizing: border-box;
 
-      // Only for mobile devices
+      /* Only for mobile devices */
       -webkit-text-size-adjust: 100%;
          -moz-text-size-adjust: 100%;
           -ms-text-size-adjust: 100%;
