Added external stylesheet and 404 page

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Arne Sierens // Web developer</title>
+  <title>404 &middot; Arne Sierens // Web developer</title>
 
   <link href="https://fonts.googleapis.com/css?family=Alice|Lato:300,400" rel="stylesheet">
   <link rel="stylesheet" href="/as.css">
@@ -23,39 +23,14 @@
     </header>
 
     <section>
-      <h2>Work</h2>
+      <h2>Page not found</h2>
 
       <p>
-        Currently developing and maintaining the
-        <strong>internal web application</strong>
-        of <a href="http://mfcsintgregorius.be/">MFC Sint-Gregorius</a>,
-        both front end and back end.
+        <strong>Oops!</strong>
+        The page you're looking for can't be found.
+        <a href="/">Visit the homepage</a>
+        or find me elsewhere on the links below.
       </p>
-    </section>
-
-    <section>
-        <h2>Hobbies</h2>
-
-        <ul class="hobbies">
-          <li>
-            Family and friends.
-          </li>
-          <li>
-            <a href="https://www.last.fm/user/arnesierens" title="View my music stats." rel="me">Music</a>.
-          </li>
-          <li>Series.</li>
-          <li>
-            <a href="https://www.goodreads.com/arnesierens" title="View the books I've read." rel="me">Books</a>.
-          </li>
-          <li>
-            Travelling.
-          </li>
-          <li>Soccer &amp; tennis.</li>
-        </ul>
-    </section>
-
-    <section>
-      <h2>Elsewhere</h2>
 
       <ul>
         <li class="social-item">
