--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 
   <title>Arne Sierens // Web developer</title>
 
+  <!-- Google Analytics -->
+  <script>
+  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+  ga('create', 'UA-111924118-1', 'auto');
+  ga('send', 'pageview');
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
+
   <link href="https://fonts.googleapis.com/css?family=Alice|Lato:300,400" rel="stylesheet">
   <link rel="stylesheet" href="/as.css">
 </head>
