Separated soccer and tennis.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <li>
             Travelling.
           </li>
-          <li>Soccer &amp; tennis.</li>
+          <li>Soccer.</li>
+          <li>Tennis.</li>
         </ul>
     </section>
 
