--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Arne Sierens // Web developer</title>
+  <title>Arne Sierens. Web developer.</title>
 
   <!-- Google Analytics -->
   <script>
@@ -24,9 +24,8 @@
     <header>
       <h1>
         <a href="/" class="h-link">
-          Arne Sierens
-          <span class="h-double-slash">//</span>
-          Web developer
+          Arne Sierens.<br>
+          Web developer.
         </a>
       </h1>
     </header>
