--- a/404.html
+++ b/404.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>404 &middot; Arne Sierens // Web developer</title>
+  <title>404 &middot; Arne Sierens. Web developer.</title>
+
+  <!-- Google Analytics -->
+  <script>
+  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+  ga('create', 'UA-111924118-1', 'auto');
+  ga('send', 'pageview');
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
 
   <link href="https://fonts.googleapis.com/css?family=Alice|Lato:300,400" rel="stylesheet">
   <link rel="stylesheet" href="/as.css">
@@ -15,9 +24,8 @@
     <header>
       <h1>
         <a href="/" class="h-link">
-          Arne Sierens
-          <span class="h-double-slash">//</span>
-          Web developer
+          Arne Sierens.<br>
+          Web developer.
         </a>
       </h1>
     </header>
