--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   <script async src='https://www.google-analytics.com/analytics.js'></script>
   <!-- End Google Analytics -->
 
-  <link href="https://fonts.googleapis.com/css?family=Alice|Lato:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600" rel="stylesheet">
   <link rel="stylesheet" href="/as.css">
 </head>
 
@@ -24,8 +24,7 @@
     <header>
       <h1>
         <a href="/" class="h-link">
-          Arne Sierens.<br>
-          Web developer.
+          Arne Sierens.
         </a>
       </h1>
     </header>
