Added profession and location to header

--- a/404.html
+++ b/404.html
@@ -28,6 +28,8 @@
           Arne Sierens.
         </a>
       </h1>
+
+      <p>Web developer. Torhout, Belgium.</p>
     </header>
 
     <section>
