--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
           Arne Sierens.
         </a>
       </h1>
+
+      <p>Web developer. Torhout, Belgium.</p>
     </header>
 
     <section>
@@ -45,9 +47,7 @@
         <h2>Hobbies</h2>
 
         <ul class="hobbies">
-          <li>
-            Family and friends.
-          </li>
+          <li>Family and friends.</li>
           <li>
             <a href="https://www.last.fm/user/arnesierens" title="View my music stats." rel="me">Music</a>.
           </li>
@@ -55,9 +55,7 @@
           <li>
             <a href="https://www.goodreads.com/arnesierens" title="View the books I've read." rel="me">Books</a>.
           </li>
-          <li>
-            Travelling.
-          </li>
+          <li>Travelling.</li>
           <li>Soccer.</li>
           <li>Tennis.</li>
         </ul>
