--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- End Google Analytics -->
 
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600" rel="stylesheet">
-  <link rel="stylesheet" href="as.css">
+  <link rel="stylesheet" href="/as.css">
 </head>
 
 <body>
