--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <li>
           <a href="https://www.goodreads.com/arnesierens" title="View the books I've read." rel="me">Books</a>.
         </li>
-        <li>Travelling.</li>
-        <li>Soccer.</li>
+        <li>(Indoor) soccer.</li>
         <li>Tennis.</li>
       </ul>
     </section>
