--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li>
           <a href="https://www.goodreads.com/arnesierens" title="View the books I've read." rel="me">Books</a>.
         </li>
-        <li>(Indoor) soccer.</li>
+        <li>(Indoor) football.</li>
         <li>Tennis.</li>
       </ul>
     </section>
