Updated work description

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <h2>Work</h2>
 
       <p>
-        Currently developing and maintaining the
-        <strong>internal web application</strong>
+        Currently developing and maintaining several
+        <strong>web applications</strong>
         of <a href="https://sintgregorius.be/mfc/">MFC Sint-Gregorius</a>,
         both front end and back end.
       </p>
