Updated work section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <p>
         Currently developing and maintaining several
-        <strong>web applications</strong>
+        <strong>internal web applications</strong>
         of <a href="https://sintgregorius.be/mfc/">MFC Sint-Gregorius</a>,
         both front end and back end.
       </p>
