--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
         </a>
       </h1>
 
-      <p>Web developer. Torhout, Belgium.</p>
+      <p>Web developer. Mainly PHP (Symfony). Torhout, Belgium.</p>
     </header>
 
     <section>
