--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>
         Currently developing and maintaining several
         <strong>internal web applications</strong>
-        of <a href="https://sintgregorius.be/mfc/">MFC Sint-Gregorius</a>,
+        of <a href="https://sintgregorius.be">Sint-Gregorius</a>,
         both front end and back end.
       </p>
     </section>
