Added link to Strava

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         </li>
         <li>Futsal.</li>
         <li>Tennis.</li>
-        <li>Cycling.<li>
+        <li>
+          <a href="https://www.strava.com/athletes/arnesierens" title="View my cycling stats." rel="me">Cycling</a>.
+        <li>
       </ul>
     </section>
 
