--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
           <a href="https://www.facebook.com/sierensarne" rel="me">Facebook</a>
         </li>
         <li class="social-item">
-          <a href="https://twitter.com/arnesierens" rel="me">Twitter</a>
+          <a href="https://twitter.com/arnesierens" rel="me">
+            <del>Twitter</del>
+          </a>
         </li>
       </ul>
     </section>
